Refactor EDS API
